--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "deploy": "astro build && gh-pages --dotfiles -d dist -m 'Deploy to GitHub Pages'"
+    "astro": "astro"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -18,7 +17,6 @@
   "devDependencies": {
     "eslint": "^9.39.2",
     "eslint-plugin-astro": "^1.5.0",
-    "gh-pages": "^6.3.0",
     "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-organize-attributes": "^1.0.0",
